// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpQueryValidator validate() spec is present header is present deprecated flag is set returns deprecation warning 1`] = `
Array [
  Object {
    "message": "Query param param is deprecated",
    "name": "deprecated",
    "path": Array [
      "query",
      "param",
    ],
    "severity": "warn",
    "summary": "",
  },
]
`;

exports[`HttpQueryValidator validate() spec is present query param is not present spec defines it as required returns validation error 1`] = `
Array [
  Object {
    "message": "Missing aParam query param",
    "name": "required",
    "path": Array [
      "query",
      "aParam",
    ],
    "severity": "error",
    "summary": "",
  },
]
`;
